@@ -3,20 +3,23 @@ post_install() {
 gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 update-desktop-database -q
 
-echo " NOTE:"
-echo " This package has been built with java support."
-echo " If you want java features for runtime, you can either use: "
-echo " 1. OpenJDK6"
-echo " 2. Sun's JRE."
-echo " you will need it for \"help\" section and some java based wizards"
-echo " for further reading: http://wiki.services.openoffice.org/wiki/Java_and_OpenOffice.org"
-echo " "
 echo " >>KDE integration is no longer supported!<<"
-echo " "
+echo " ----------------------------------------------------"
 echo " Please preset Gnome appearance always with"
 echo " \"export OOO_FORCE_DESKTOP=gnome\" even when"
 echo " you are runnning a different desktop!"
-echo " or put it in /etc/profile, rc.local, or ~/.bashrc."
+echo " or put it in /etc/profile, rc.local, or ~/.bashrc"
+echo " ----------------------------------------------------"
+echo " see http://wiki.archlinux.org/index.php/Openoffice"
+echo " how to use extensions now for spell checking"
+echo " see extension manager what is shipped in the package"
+echo " ----------------------------------------------------"
+echo -ne " deploying dictionaries now" 
+for i in `ls -1 /opt/openoffice-dev/share/extension/install/dict-??.oxt`; do
+  echo -n "."
+  /opt/openoffice-beta/program/unopkg add --shared --force $i &> /dev/null
+done
+echo " "
 }
 
 post_upgrade() {
@@ -31,3 +34,4 @@ gtk-update-icon-cache -f -q /usr/share/icons/hicolor
 op=$1
 shift
 $op $*
+
